[package]
name = "twitchalerts"
version = "0.1.5"
description = "A crate which when it detect that a streamer is live which trigger the event handler, more features to be added."
edition = "2021"
license = "Apache-2.0"
homepage = "https://crates.io/crates/twitchalerts"
documentation = "https://docs.rs/twitchalerts"
readme = "README.md"
repository = "https://github.com/concelaredev/twitchalerts"
authors = ["ConcelareDev"]

[dependencies]
tokio = { version = "1.33.0", features = ["rt", "macros", "io-std", "fs"] }
serde = {version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = { version = "0.1.74" }
toml = { version = "0.8.2" }