[package]
name = "StreamAlerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb", features = ["kv-mem"] }
twitchalerts = { version = "0.1.0" }